--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,1 +1,8 @@
-<p>This is my create post component.</p>
+<div align="center">
+  <h4>Create Post</h4>
+  <hr>
+  <div>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <button (click)="createPost()" >save post</button>
+  </div>
+</div>
