--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -5,4 +5,5 @@
     <textarea name="" id="" cols="30" rows="10"></textarea>
     <button (click)="createPost()" >save post</button>
   </div>
+  <p>{{ newPost }}</p>
 </div>
