--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -2,7 +2,7 @@
   <h4>Create Post</h4>
   <hr>
   <div>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <textarea name="" id="" cols="30" rows="10" [value]="newPost" ></textarea>
     <button (click)="createPost()" >save post</button>
   </div>
   <p>{{ newPost }}</p>
